corrected center justification for hamburger menu on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,6 @@
 .navbar-collapse {
   display: flex;
   justify-content: flex-end;
-  align-items: flex-end;
-  align-content: flex-end;
 }
 
 .App-logo {
@@ -108,6 +106,11 @@ main {
     }
   .about-text {
     text-align: left;
+  }
+  .navbar-collapse {
+    display: flex;
+    justify-content: center;
+   
   }
 }
 
